--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -205,7 +205,9 @@
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add Contractor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Contractor" action="Widgets.dialogAddVendor.open()"
                                                         shortcutkey="" disabled="false"></wm-grid-action>
-                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Variables.lvDeleteVendorFromProject.deleteRecord()"
+                                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.confirmdialogDeleteVendorConfrim.open()"
+                                                        disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-search" title="ViewVendor" action="Widgets.dialogVendorDetails.open()"
                                                         disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                 </wm-livegrid>
@@ -957,7 +959,7 @@
                     <wm-gridcolumn columnwidth="1" name="gridcolumn158"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" name="gridcolumn159">
                         <wm-composite name="composite5_1">
-                            <wm-checkbox caption="Set as Primary Contractor" name="checkboxPrimaryVendor" checkedvalue="true" uncheckedvalue="false"></wm-checkbox>
+                            <wm-checkbox caption="Set as Primary Contractor" name="checkboxPrimaryVendor" checkedvalue="true" uncheckedvalue="false" datavalue="bind:Variables.stvDefaultPrimaryVendor.dataSet.dataValue"></wm-checkbox>
                         </wm-composite>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn160"></wm-gridcolumn>
@@ -981,6 +983,66 @@
             <wm-dialogactions name="dialogactions4">
                 <wm-button class="btn-primary" caption="Add Contractor" type="button" margin="unset 0.5em" iconclass="wi wi-plus" show="true" on-click="Variables.lvInsertVendorsToProjects.createRecord()" name="buttonTagVendor" disabled="bind:!Widgets.searchVendor.datavalue.id"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button11" iconclass="wi wi-cancel"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewDeleteVendorConfrim">
+        <wm-confirmdialog name="confirmdialogDeleteVendorConfrim" on-cancel="Widgets.confirmdialogDeleteVendorConfrim.close()" on-ok="Variables.lvDeleteVendorFromProject.deleteRecord()" message="Are you sure you want to delete this contractor?"></wm-confirmdialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewVendorDetails">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Contractor Details" iconclass="wi wi-work" name="dialogVendorDetails">
+            <wm-layoutgrid name="layoutgrid31">
+                <wm-gridrow name="gridrow90_1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn166">
+                        <wm-label padding="unset 0.5em" caption="Company Name" name="label103" hint="Name"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn167_1">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.companyName" name="label104" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow91">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn168">
+                        <wm-label padding="unset 0.5em" caption="Contractor Type" name="label105"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn169">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.contractorTypes.contractorType" name="label106" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow96">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn178">
+                        <wm-label padding="unset 0.5em" caption="Address" name="label111"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn179">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.fullAddress" name="label116" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow95">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn176">
+                        <wm-label padding="unset 0.5em" caption="Company Phone" name="label110"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn177">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.companyPhone" name="label115" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow93">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn172">
+                        <wm-label padding="unset 0.5em" caption="Company Email" name="label108"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn173">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.companyEmail" name="label113" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow94">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn174_1">
+                        <wm-label padding="unset 0.5em" caption="Company Website" name="label109"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn175_1">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridProjectVendors.selecteditem.vendor.companyWebsite" name="label114" fontweight="bold"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions11">
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button25" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
