removed "Disabled" binding that doesn't work after WM update (and isn't needed) from fees and accounting codes Files modified - [EditForm,EditInspection]

--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -226,34 +226,34 @@
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn70" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayInspectionFee" displayname="Same Day Inspection Fee" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayInspections.datavalue" primary-key="false"
                                                                 generator="assigned" key="sameDayInspectionFee" type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value"
-                                                                disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayInspections.datavalue"></wm-form-field>
+                                                                disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn71" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayInspectionFeeAcctCode" displayname="Same Day Inspection Fee Accounting Code" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayInspections.datavalue"
                                                                 primary-key="false" generator="assigned" key="sameDayInspectionFeeAcctCode" type="string" readonly="false" required="bind:Widgets.lfUpdateInspectionDesign.formWidgets.sameDayInspectionFee.datavalue > 0"
-                                                                widget="text" maxchars="255" inputtype="text" placeholder="Enter value" disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayInspections.datavalue"></wm-form-field>
+                                                                widget="text" maxchars="255" inputtype="text" placeholder="Enter value" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow40_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn61" padding="unset 1em unset unset">
                                                                 <wm-form-field name="cancelFee" displayname="Cancellation Fee" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue" primary-key="false" generator="assigned" key="cancelFee"
-                                                                type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue"></wm-form-field>
+                                                                type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn64_1" padding="unset 1em unset unset">
                                                                 <wm-form-field name="cancelFeeAccount" displayname="Cancellation Fee Accounting Code" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue" primary-key="false" generator="assigned"
                                                                 key="cancelFeeAccount" type="string" readonly="false" required="bind:Widgets.lfUpdateInspectionDesign.formWidgets.cancelFee.datavalue > 0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                                disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowCancel.datavalue"></wm-form-field>
+                                                                disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow41_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn63" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayCancelFee" displayname="Same Day Cancellation Fee" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue" primary-key="false" generator="assigned"
-                                                                key="sameDayCancelFee" type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue"></wm-form-field>
+                                                                key="sameDayCancelFee" type="integer" maxvalue="1000000000000" readonly="false" required="false" step="0.01" widget="currency" minvalue="0" placeholder="Enter value" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn65" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sameDayCancelAcctCode" displayname="Same Day Cancellation Accounting Code" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue" primary-key="false"
                                                                 generator="assigned" key="sameDayCancelAcctCode" type="string" readonly="false" required="bind:Widgets.lfUpdateInspectionDesign.formWidgets.sameDayCancelFee.datavalue > 0" widget="text" maxchars="255"
-                                                                inputtype="text" placeholder="Enter value" disabled="bind:!Widgets.lfUpdateInspectionDesign.formWidgets.allowSameDayCancel.datavalue"></wm-form-field>
+                                                                inputtype="text" placeholder="Enter value" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow49_1">
