--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -248,12 +248,12 @@
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="unset 1em unset unset">
                                                                 <wm-form-field name="flatFee" displayname="Flat Fee" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned" key="flatFee" type="string"
                                                                 maxvalue="1000000000000" readonly="false" required="false" widget="currency" maxchars="255" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].flatFee" hint="This value adds a flat fee of the amount specified to the form."
-                                                                minvalue="0" step="0.01" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                minvalue="0" step="0.01" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn31" padding="unset 1em unset unset">
                                                                 <wm-form-field name="flatFeeAccountingCode" displayname="Flat Fee Accounting Code" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned"
                                                                 key="flatFeeAccountingCode" type="string" readonly="false" required="bind:Widgets.liveformUpdateFormType.formWidgets.flatFee.datavalue > 0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].flatFeeAccountingCode" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].flatFeeAccountingCode" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow18" padding="unset unset 1em unset">
@@ -261,48 +261,48 @@
                                                                 <wm-form-field name="sfFee" displayname="Square Footage Fee" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned" key="sfFee"
                                                                 type="string" maxvalue="1000000000000" readonly="false" required="false" widget="currency" maxchars="255" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].sfFee"
                                                                 hint="The amount set above is the cost per square foot, which is multiplied by the value the user provides for the default form field &quot;Total Square Footage (100)&quot;." minvalue="0"
-                                                                step="0.01" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                step="0.01" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn33" padding="unset 1em unset unset">
                                                                 <wm-form-field name="sfFeeAccountingCode" displayname="SF Fee Accounting Code" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned"
                                                                 key="sfFeeAccountingCode" type="string" readonly="false" required="bind:Widgets.liveformUpdateFormType.formWidgets.sfFee.datavalue > 0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].sfFeeAccountingCode" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].sfFeeAccountingCode" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow19" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset 1em unset unset">
                                                                 <wm-form-field name="unitFee" displayname="Unit Fee" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned" key="unitFee" type="string"
                                                                 maxvalue="1000000000000" readonly="false" required="false" widget="currency" maxchars="255" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].unitFee" hint="The amount set above is the cost per unit, which is multiplied by the value the user provides for the default form field &quot;Total Units (101)&quot;."
-                                                                minvalue="0" step="0.01" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                minvalue="0" step="0.01" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn35" padding="unset 1em unset unset">
                                                                 <wm-form-field name="unitFeeAccountingCode" displayname="Unit Fee Accounting Code" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned"
                                                                 key="unitFeeAccountingCode" type="string" readonly="false" required="bind:Widgets.liveformUpdateFormType.formWidgets.unitFee.datavalue > 0" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].unitFeeAccountingCode" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].unitFeeAccountingCode" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow41_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn66" padding="unset 1em unset unset">
                                                                 <wm-form-field name="basementFee" displayname="Basement Fee" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned" key="basementFee"
                                                                 type="string" maxvalue="1000000000000" readonly="false" required="false" widget="currency" maxchars="255" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].basementFee" placeholder="Enter value"
-                                                                hint="The amount set above is a flat fee that will be applied based on the user's selection for the default form field &quot;Has Basement (102)&quot;." minvalue="0" step="0.01" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                hint="The amount set above is a flat fee that will be applied based on the user's selection for the default form field &quot;Has Basement (102)&quot;." minvalue="0" step="0.01" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn67" padding="unset 1em unset unset">
                                                                 <wm-form-field name="basementFeeAccountingCode" displayname="Basement Fee Accounting Code" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned"
                                                                 key="basementFeeAccountingCode" type="string" readonly="false" required="bind:Widgets.liveformUpdateFormType.formWidgets.basementFee.datavalue > 0" widget="text" maxchars="255" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].basementFeeAccountingCode"
-                                                                placeholder="Enter value" inputtype="text" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                placeholder="Enter value" inputtype="text" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow20" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn19" horizontalalign="left" padding="unset 1em unset unset">
                                                                 <wm-form-field name="stateFee" displayname="State Fee" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned" key="stateFee" type="string"
                                                                 maxvalue="500" readonly="false" required="false" widget="text" maxchars="255" inputtype="number" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].stateFee | stringToNumber"
-                                                                hint="The value specified above is a percentage that gets multiplied by the total of all the Automatic Fees above that have been added to the form." step="0.01" minvalue="0" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                hint="The value specified above is a percentage that gets multiplied by the total of all the Automatic Fees above that have been added to the form." step="0.01" minvalue="0" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="6" name="gridcolumn140_1">
                                                                 <wm-form-field name="stateFeeAccountingCode" displayname="State Fee Accounting Code" show="bind:Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue" primary-key="false" generator="assigned"
                                                                 key="stateFeeAccountingCode" type="string" readonly="false" required="bind:Widgets.liveformUpdateFormType.formWidgets.stateFee.datavalue > 0" widget="text" maxchars="255" inputtype="text"
-                                                                placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].stateFeeAccountingCode" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.automaticFees.datavalue"></wm-form-field>
+                                                                placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].stateFeeAccountingCode" disabled="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                     </wm-layoutgrid>
